# AOC2021

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
day00/: part1.py
day01/: part1.py  part2.py
day02/: part1.py  part2.py
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: part1.py  part2.py
day06/: part1.py  part2.py
day07/: part1.py  part2.py
day08/: part1.py  part2.py
day09/: part1.py  part2.py  test_2_input.txt
day10/: part1.py  part2.py
day11/: part1.py  part2.py
day12/: part1.py  part2.py
day13/: part1.py  part2.py
day14/: part1.py  part2.py
day15/: part1.py  part2.py
day16/: part1.py  part2.py
src/aoc/: indexers.py  parsers.py  submit.py
