[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Joris Boeye <joris.boeye@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
advent-of-code-data = "^1.1.1"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
