[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Joris Boeye <joris.boeye@gmail.com>"]
packages = [
    { include = "aoc", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
advent-of-code-data = "^1.1.1"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# Global options:
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
allow_untyped_calls = false
allow_untyped_defs = false
check_untyped_defs = true
show_error_codes = true

[tool.isort]
profile = "black"
